Bug 495417 - Currency conversion in category/accounts view is not correct
Summary: Currency conversion in category/accounts view is not correct
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks: 488491
  Show dependency treegraph
 
Reported: 2024-10-27 09:11 UTC by Thomas Baumgart
Modified: 2024-10-28 07:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments
Testfile showing the problem (11.05 KB, text/xml)
2024-10-27 09:11 UTC, Thomas Baumgart
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2024-10-27 09:11:22 UTC
Created attachment 175267 [details]
Testfile showing the problem

SUMMARY
Opening a test file shows incorrect value after currency conversion in categories view

STEPS TO REPRODUCE
1. Open attached test file
2. Select categories view
3. 

OBSERVED RESULT
Sales-Tax (FRF) shows Balance of 1047,30 FF and Value of 159,70 EUR

EXPECTED RESULT
Sales-Tax (FRF) shows Balance of 1047,30 FF and Value of 159,66 EUR

ADDITIONAL INFORMATION
The values in the transactions and the currency conversion rate between EUR and FF have correct values. Multiplying 1047,30 FF with the included conversion rate in an external calculator yields 159,66 EUR.
Comment 1 Thomas Baumgart 2024-10-28 07:42:46 UTC
Git commit a09349e3c4982c042774087e334ae324f2cff6e0 by Thomas Baumgart.
Committed on 28/10/2024 at 07:42.
Pushed by tbaumgart into branch 'master'.

Remove unnecessary conversion from denominator to precision
FIXED-IN: 5.2

M  +1    -1    kmymoney/mymoney/storage/accountsmodel.cpp

https://invent.kde.org/office/kmymoney/-/commit/a09349e3c4982c042774087e334ae324f2cff6e0