Remove unnecessary conversion from denominator to precision

BUG: 495417
FIXED-IN: 5.2